#9267 [아이콘 정리] itsm

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1323,7 +1323,7 @@ span.vertical-bar {
   padding-top: 1.25rem;
 }
 
-.container .contents-list .list a {
+.container .contents-list .list a, .container .contents-list .list button {
   cursor: pointer;
 }
 
@@ -1388,6 +1388,27 @@ span.vertical-bar {
 
 .container .contents-list .list table tbody tr td:first-child {
   padding-left: 1.25rem;
+}
+
+.container .contents-list .list table tbody tr td button {
+  margin: 0;
+  padding: 0 5px;
+  height: 30px;
+}
+
+.container .contents-list .list table tbody tr td button .icon-search {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background: #ACB4BF;
+  -webkit-mask-image: url("../media/icons/icon_search.svg");
+  mask-image: url("../media/icons/icon_search.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: 18px 18px;
+  mask-size: 18px 18px;
 }
 
 .container .contents-edit {
@@ -1670,7 +1691,7 @@ span.vertical-bar {
   padding-top: 1.25rem;
 }
 
-.container .contents-list-edit > .list-area .list a {
+.container .contents-list-edit > .list-area .list a, .container .contents-list-edit > .list-area .list button {
   cursor: pointer;
 }
 
@@ -1735,6 +1756,27 @@ span.vertical-bar {
 
 .container .contents-list-edit > .list-area .list table tbody tr td:first-child {
   padding-left: 1.25rem;
+}
+
+.container .contents-list-edit > .list-area .list table tbody tr td button {
+  margin: 0;
+  padding: 0 5px;
+  height: 30px;
+}
+
+.container .contents-list-edit > .list-area .list table tbody tr td button .icon-search {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background: #ACB4BF;
+  -webkit-mask-image: url("../media/icons/icon_search.svg");
+  mask-image: url("../media/icons/icon_search.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: 18px 18px;
+  mask-size: 18px 18px;
 }
 
 .container .contents-list-edit > .edit-area {
@@ -1878,7 +1920,7 @@ span.vertical-bar {
   padding-top: 1.25rem;
 }
 
-.container .contents-tree-edit > .tree-area .list a {
+.container .contents-tree-edit > .tree-area .list a, .container .contents-tree-edit > .tree-area .list button {
   cursor: pointer;
 }
 
@@ -1943,6 +1985,27 @@ span.vertical-bar {
 
 .container .contents-tree-edit > .tree-area .list table tbody tr td:first-child {
   padding-left: 1.25rem;
+}
+
+.container .contents-tree-edit > .tree-area .list table tbody tr td button {
+  margin: 0;
+  padding: 0 5px;
+  height: 30px;
+}
+
+.container .contents-tree-edit > .tree-area .list table tbody tr td button .icon-search {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background: #ACB4BF;
+  -webkit-mask-image: url("../media/icons/icon_search.svg");
+  mask-image: url("../media/icons/icon_search.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  -webkit-mask-size: 18px 18px;
+  mask-size: 18px 18px;
 }
 
 .container .contents-tree-edit > .tree-area .list {
@@ -2629,7 +2692,7 @@ span.vertical-bar {
 
 .container .btn-add {
   display: inline-block;
-  background: url("../media/icons/icon_add.svg") no-repeat center center;
+  background: url("../media/icons/icon_plus.svg") no-repeat center center;
   padding: 10px;
   border-radius: 2px;
   border: 1px solid #0050ff;
@@ -2637,40 +2700,9 @@ span.vertical-bar {
 }
 
 .container .btn-add:hover {
-  background: #0050ff url("../media/icons/icon_add_ov.svg") no-repeat center center;
+  background: #0050ff url("../media/icons/icon_plus.svg") no-repeat center center;
   color: #0050ff;
   border: rgba(64, 158, 230, 0.05) 1px solid;
-}
-
-.container .btn-import {
-  display: inline-block;
-  background: white url("../media/icons/icon_import.svg") no-repeat center center;
-  padding: 10px;
-  border-radius: 2px;
-  border: 1px solid #c8ced8;
-  text-align: center;
-  position: relative;
-  right: 3px;
-}
-
-.container .btn-import:hover {
-  background: #e9ebed url("../media/icons/icon_import_ov.svg") no-repeat center center;
-  color: #e9ebed;
-  border: #c8ced8 1px solid;
-  position: relative;
-  right: 3px;
-}
-
-.container .btn-info {
-  background: url("../icons/icon_info.png") no-repeat right;
-  display: inline-block;
-  margin-left: 5px;
-  width: 15px;
-  height: 15px;
-}
-
-.container .btn-info:hover {
-  background: url("../icons/icon_info_select.png") no-repeat right;
 }
 
 .container .btn-gray {
@@ -2930,8 +2962,8 @@ span.vertical-bar {
   background: #929aa6;
   mask-repeat: no-repeat;
   mask-position: center center;
-  -webkit-mask: url("../media/icons/icon_arrow_l.svg") no-repeat center center;
-  mask-image: url("../media/icons/icon_arrow_l.svg");
+  -webkit-mask: url("../media/icons/icon_arrow_left.svg") no-repeat center center;
+  mask-image: url("../media/icons/icon_arrow_left.svg");
 }
 
 .gnb-area > ul > li > a span.arrow-down {
@@ -2943,8 +2975,8 @@ span.vertical-bar {
   background: #929aa6;
   mask-repeat: no-repeat;
   mask-position: center center;
-  -webkit-mask: url("../media/icons/icon_arrow_d.svg") no-repeat center center;
-  mask-image: url("../media/icons/icon_arrow_d.svg");
+  -webkit-mask: url("../media/icons/icon_arrow_bottom.svg") no-repeat center center;
+  mask-image: url("../media/icons/icon_arrow_bottom.svg");
 }
 
 .gnb-area > ul > li > ul > li {
@@ -3163,7 +3195,7 @@ span.vertical-bar {
   float: left;
   width: 6.25rem;
   height: 6.25rem;
-  background: url("../icons/graphic_under_notification.svg") no-repeat center center;
+  background: url("../images/notification/img_notification_logo.png") no-repeat center center;
 }
 
 .alice-toastify.alice-toastify-content div.content {
@@ -3587,7 +3619,7 @@ span.vertical-bar {
   border: none;
   grid-column: 3;
   grid-row: 1 / span 2;
-  background-image: url("../../../media/icons/dropzone/icon_fileupload_download.svg");
+  background-image: url("../media/icons/icon_download.svg");
   background-size: 1.25rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -3602,7 +3634,7 @@ span.vertical-bar {
   border: none;
   grid-column: 5;
   grid-row: 1 / span 2;
-  background-image: url("../../../media/icons/dropzone/icon_fileupload_delete.svg");
+  background-image: url("../media/icons/icon_delete.svg");
   background-size: 1.125rem 1.25rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -3655,11 +3687,6 @@ span.vertical-bar {
   height: 100%;
   grid-column: 1;
   grid-row: 1 / span 2;
-  background-image: url("../../../media/icons/dropzone/icon_document_txt.svg");
-  background-size: auto;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  background-position-y: center;
 }
 
 .dropzone .dz-preview:hover .dz-image img {
@@ -3906,7 +3933,7 @@ span.vertical-bar {
   width: 18.75rem;
   height: 18.75rem;
   padding: 0;
-  background-image: url("../../../media/icons/dropzone/icon_image.svg");
+  background-image: url("../media/icons/icon_image.svg");
   background-size: 5rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -3952,7 +3979,7 @@ span.vertical-bar {
   position: absolute;
   top: 0;
   right: 0;
-  background-image: url("../../../media/icons/dropzone/icon_close.svg");
+  background-image: url("../media/icons/icon_close.svg");
   background-size: 0.875rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -4000,7 +4027,7 @@ span.vertical-bar {
   width: 9.375rem;
   height: 9.375rem;
   padding: 0;
-  background-image: url("../../../media/icons/dropzone/icon_image_sm.svg");
+  background-image: url("../media/icons/icon_image.svg");
   background-size: 2.813rem;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -4059,12 +4086,16 @@ span.vertical-bar {
   padding: 1.125rem 0;
 }
 
-.picker-modal-title img.close {
+.picker-modal-title span.close {
   position: absolute;
   right: 1.25rem;
+  background: #CCCED1;
   width: 0.875rem;
   height: 0.875rem;
-  content: url("../../../media/icons/datepicker/icon_close.png");
+  -webkit-mask: url("../../../media/icons/datepicker/icon_close.svg") no-repeat center center;
+  mask-image: url("../../../media/icons/datepicker/icon_close.svg");
+  mask-repeat: no-repeat;
+  mask-position: center;
   cursor: pointer;
 }
 
@@ -4674,7 +4705,7 @@ button.plus {
   width: 24px;
   height: 24px;
   border: 1px solid #0098FF;
-  background: white url("../media/icons/icon_add.svg") no-repeat center center;
+  background: white url("../media/icons/icon_plus.svg") no-repeat center center;
   padding: 0;
 }
 
@@ -5001,7 +5032,11 @@ button.minus:not(:disabled):focus, button.minus:not(:disabled):hover {
 }
 
 .help-tooltip .help-tooltip-icon:before {
-  content: url("../../../media/images/icon_info.png");
+  background: #CCCED1;
+  -webkit-mask: url("../media/icons/icon_tooltip.svg") no-repeat center center;
+  mask-image: url("../media/icons/icon_tooltip.svg");
+  mask-repeat: no-repeat;
+  mask-position: center;
 }
 
 .help-tooltip .tooltip-contents {
@@ -5034,7 +5069,7 @@ button.minus:not(:disabled):focus, button.minus:not(:disabled):hover {
 }
 
 .help-tooltip:hover .help-tooltip-icon {
-  content: url("../../../media/images/icon_info_select.png");
+  background: #0098FF;
 }
 
 .thumbnail-container {
@@ -5119,7 +5154,7 @@ button.minus:not(:disabled):focus, button.minus:not(:disabled):hover {
 .thumbnail-container .thumbnail div.thumbnail-bottom img {
   width: 0.9375rem;
   height: 0.9375rem;
-  content: url("../../../media/icons/thumbnail/icon_thumbnail_delete.png");
+  content: url("../media/icons/icon_delete.svg");
   cursor: pointer;
 }
 
@@ -5346,7 +5381,7 @@ body.thumbnail-modal-active {
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail div.thumbnail-bottom img {
   width: 0.9375rem;
   height: 0.9375rem;
-  content: url("../../../media/icons/thumbnail/icon_thumbnail_delete.png");
+  content: url("../media/icons/icon_delete.svg");
 }
 
 .thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail-upload {
@@ -5630,7 +5665,7 @@ body.thumbnail-modal-active {
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail div.thumbnail-bottom img {
   width: 0.9375rem;
   height: 0.9375rem;
-  content: url("../../../media/icons/thumbnail/icon_thumbnail_delete.png");
+  content: url("../media/icons/icon_delete.svg");
 }
 
 .thumbnail-icon-modal-wrapper .thumbnail-icon-modal-dialog .thumbnail-modal-body .thumbnail-container .thumbnail-upload {
