--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -31,9 +31,9 @@
                        th:href="@{/notices/{id}/edit(id=${topNotice.noticeNo})}"></a>
                 </td>
                 <td width="5%" th:if="${topNotice.popYn}">
-                    <a th:attr="onclick=|openPopUp('${topNotice.noticeNo}', '${topNotice.popWidth}', '${topNotice.popHeight}')|">
-                        <img th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
-                    </a>
+                    <button type="button" class="default-fill" th:onclick="openPopUp([[${topNotice.noticeNo}]], [[${topNotice.popWidth}]], [[${topNotice.popHeight}]])">
+                        <span class="icon-search"></span>
+                    </button>
                 </td>
                 <td width="5%" th:unless="${topNotice.popYn}"></td>
                 <td width="10%" th:text="${topNotice?.createUserName}"></td>
@@ -49,9 +49,9 @@
                        th:href="@{/notices/{id}/edit(id=${notice.noticeNo})}"></a>
                 </td>
                 <td width="5%" th:if="${notice.popYn}">
-                    <a th:attr="onclick=|openPopUp('${notice.noticeNo}', '${notice.popWidth}', '${notice.popHeight}')|">
-                        <img th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_popup.svg'">
-                    </a>
+                    <button type="button" class="default-fill" th:onclick="openPopUp([[${notice.noticeNo}]], [[${notice.popWidth}]], [[${notice.popHeight}]])">
+                        <span class="icon-search"></span>
+                    </button>
                 </td>
                 <td width="5%" th:unless="${notice.popYn}"></td>
                 <td width="10%" id="userName" th:text="${notice?.createUserName}"></td>
