--- a/src/main/resources/public/src/scss/form/form.scss
+++ b/src/main/resources/public/src/scss/form/form.scss
@@ -18,7 +18,7 @@
 @import '_properties.scss';
 @import '_fileUploader.scss';
 @import '_modal.scss';
-@import '_datepicker.scss';
+@import "../template/_date-picker.scss";
 @import '../template/_thumbnail.scss';
 @import '_quill.scss';
 @import '_colorpicker.scss';
