--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -15,7 +15,7 @@
 @import '_gnb.scss';
 @import '_notification.scss';
 @import '_fileUploader.scss';
-@import '_datepicker.scss';
+@import "../../template/_date-picker.scss";
 @import '_colorpicker.scss';
 @import '_scrollbar.scss';
 @import '_buttons.scss';
