--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -28,7 +28,7 @@
 @import '_tooltip.scss';
 @import '_login.scss';
 @import '_scrollbar.scss';
-@import '_datepicker.scss';
+@import "../template/_date-picker.scss";
 @import '_alignment.scss';
 @import '_fileUploader.scss';
 @import '_buttons.scss';
