--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -102,17 +102,7 @@
                           height: 30px;
                           .icon-search {
                             display: inline-block;
-                            width: 18px;
-                            height: 18px;
-                            background: $gray;
-                            -webkit-mask-image: url("#{$icon-folder-path}icon_search.svg");
-                            mask-image: url("#{$icon-folder-path}icon_search.svg");
-                            -webkit-mask-repeat: no-repeat;
-                            mask-repeat: no-repeat;
-                            -webkit-mask-position: center;
-                            mask-position: center;
-                            -webkit-mask-size: 18px 18px;
-                            mask-size: 18px 18px;
+                            @include maskImage('#{$icon-folder-path}icon_search.svg', 18px, 18px, no-repeat, center, 18px 18px, $gray);
                           }
                         }
                     }
