--- a/src/main/resources/public/template/notice/noticeSearch.html
+++ b/src/main/resources/public/template/notice/noticeSearch.html
@@ -4,7 +4,7 @@
     xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
     layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{menu.portal.notice}"></title>
+    <title th:text="#{menu.notice.parent}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
