--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -21,9 +21,9 @@
                 <span th:text="${boardInfo?.boardTitle}"></span>
             </h4>
             <div class="row-right">
-                <span th:text="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"></span>
-                <span class="vertical-bar"></span>
                 <span id="spanCreateDt" th:text="${boardInfo?.createDt}"></span>
+                <span class="vertical-bar"></span>
+                <span class="user-name" th:text="${boardInfo?.createUser} ? ${boardInfo.createUser.userName} : ''"></span>
             </div>
             <div class="flex-item horizontal-bar"></div>
             <div class="flex-item item-text">
