--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -20,7 +20,7 @@
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${download?.createDt}"></span>
                 <span class="vertical-bar"></span>
-                <span th:text="${download?.createUserName}"></span>
+                <span class="user-name" th:text="${download?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-text">
