--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -20,7 +20,7 @@
             <div class="row-right">
                 <span id="spanCreateDt" th:text="${faq?.createDt}"></span>
                 <span class="vertical-bar"></span>
-                <span th:text="${faq?.createUserName}"></span>
+                <span class="user-name" th:text="${faq?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
             <div class="view-text">
