--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -26,7 +26,7 @@
                 <div class="document-detail">
                     <div class="document-user">
                         <img class="profile-photo" alt="profile pic" th:src="${token.avatarPath}">
-                        <h5 th:text="${token.createUserName}"></h5>
+                        <h5 class="user-name" th:text="${token.createUserName}"></h5>
                     </div>
                     <span class="vertical-bar"></span>
                     <h5 th:text="${token.createDt}" class="create-dt"></h5>
