--- a/src/main/resources/public/src/scss/theme/default/_container.scss
+++ b/src/main/resources/public/src/scss/theme/default/_container.scss
@@ -34,7 +34,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 8.75rem; // 140px;
+    max-width: 8.75rem; // 140px
 }
 
 // 리스트 출력용 아바타 이미지
